test/tests/success/not.sm
// true
// true
// true
/**/
/*
true
false
true
false
false
false
*/

program {
    func x(a: bool): bool {
        a
    }
    array a[0:0]: bool;

    output !false; // true
    output !true; // false
    output !true | true; // true
    output !(true | true); // false
    output !x(true); // false

    a[0] = 1 == 1;
    output !a[0];
}