test/tests/errors/error-class-cannot-assign-const2.sm
// true
// false
// false
/**/
/**/

program {
    class T {
        proc x() {}
        proc y() {}
    }

    const a: T = new T();
    a.x = a.y;
}